[package]
name = "ruhroh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
simple_logger = "2.2"
tokio = { version = "1.19", features = ["full"] }
ctrlc = { version = "3.2", features = ["termination"] }
